--- a/RegistroProdcuctos/res/menu/main.xml
+++ b/RegistroProdcuctos/res/menu/main.xml
@@ -3,10 +3,13 @@
     xmlns:tools="http://schemas.android.com/tools"
     tools:context="pe.joedayz.registroprodcuctos.MainActivity" >
 
+   
+    <item 
+        android:id="@+id/nuevoProducto"
+        android:title="@string/nuevoProducto"/>
+    
     <item
-        android:id="@+id/action_settings"
-        android:orderInCategory="100"
-        android:title="@string/action_settings"
-        app:showAsAction="never"/>
+        android:id="@+id/mapa"
+        android:title="@string/mapa"/>
 
 </menu>
