--- a/Sentinel/app/src/main/res/xml/pref_general.xml
+++ b/Sentinel/app/src/main/res/xml/pref_general.xml
@@ -10,5 +10,13 @@
         android:singleLine="true"
         android:title="@string/pref_location_label" />
 
+    <ListPreference
+        android:title="@string/pref_units_label"
+        android:key="@string/pref_units_key"
+        android:defaultValue="@string/pref_units_metric"
+        android:entryValues="@array/pref_units_values"
+        android:entries="@array/pref_units_options"
+   ></ListPreference>
+
 
 </PreferenceScreen>
