--- a/Sentinel/app/src/main/res/layout/list_item_forecast.xml
+++ b/Sentinel/app/src/main/res/layout/list_item_forecast.xml
@@ -1,3 +1,5 @@
+<?xml version="1.0" encoding="utf-8"?>
+
 <!-- Layout for weather forecast list item for future day (not today) -->
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
@@ -5,6 +7,7 @@
     android:gravity="center_vertical"
     android:minHeight="?android:attr/listPreferredItemHeight"
     android:orientation="horizontal"
+    android:background="@drawable/touch_selector"
     android:padding="16dp">
 
     <ImageView
